--- a/partie-7/index.html
+++ b/partie-7/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8" />
-<title>Grands Formats - Objectif Mitaraka</title>
+<title>Grands Formats</title>
 <link rel="stylesheet" href="global.css" media="all" />
 </head>
 <body dir="LTR">
